--- a/pages/add-lot.html
+++ b/pages/add-lot.html
@@ -104,8 +104,8 @@
         <span class="form__error">Введите начальную цену</span>
       </div>
       <div class="form__item form__item--small">
-        <label for="lot-step">Шаг ставки</label>
-        <input id="lot-step" type="number" name="lot-step" placeholder="0" required>
+        <label for="lotstep">Шаг ставки</label>
+        <input id="lotstep" type="number" name="lotstep" placeholder="0" required>
         <span class="form__error">Введите шаг ставки</span>
       </div>
       <div class="form__item">
